# p2pGame

p2pGameCore/: Cargo.toml  cbindgen.toml  readme.md
p2pGameCore/src/: lib.rs
p2pGame_iOS/: libp2pGameCore.dylib  p2pGame-Bridging-Header.h  p2pGameCore.h
p2pGame_iOS/p2pGame/: ContentView.swift  p2pGameApp.swift
p2pGame_iOS/p2pGame.xcodeproj/: project.pbxproj
p2pGame_iOS/p2pGame.xcodeproj/project.xcworkspace/xcuserdata/whitelau.xcuserdatad/: UserInterfaceState.xcuserstate
p2pGame_iOS/p2pGame.xcodeproj/xcuserdata/whitelau.xcuserdatad/xcschemes/: xcschememanagement.plist
p2pGame_iOS/p2pGameTests/: p2pGameTests.swift
p2pGame_iOS/p2pGameUITests/: p2pGameUITests.swift  p2pGameUITestsLaunchTests.swift
