[package]
name = "p2pGameCore"
version = "0.1.0"
edition = "2024"

[lib]
name = "p2pGameCore"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
libp2p = { version = "0.52", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }